syntax = "proto3";
package cheetah.matches.matchmaking.external;
option csharp_namespace = "Cheetah.Matches.Matchmaking.GRPC";

service Matchmaking {
  /**
    Создать билет на вход в матч для пользователя
   */
  rpc Matchmaking(TicketRequest) returns (TicketResponse);
}

message TicketRequest {
  uint64 user_groups = 1;
  string match_template = 2;
}

message TicketResponse {
  bytes private_key = 1;
  uint32 member_id = 2;
  uint64 room_id = 3;
  string realtime_server_host = 4;
  uint32 realtime_server_port = 5;
}
